part1/logs/manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logs
  template:
    metadata:
      labels:
        app: logs
    spec:
      containers:
        - name: logs
          image: joonasahovalli/logs:1.0.2
