part1/logs/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logs-svc
spec:
  type: ClusterIP
  selector:
    app: logs
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 2341
